--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,4 @@
-ryan@barc.com
-mario@barc.com
-
+Ryan Atkinson <ryanatkn@gmail.com>
+Mario Gutierrez <mario@mgutz.com>
+Ryan Lynch <lynch.r.j@gmail.com>
+Justin Hileman <justin@justinhileman.info>
